tests/neg/trailing-comma-pattern2.check
-- [E032] Syntax Error: tests/neg/trailing-comma-pattern2.scala:2:21 ---------------------------------------------------
2 |  val List(x, y, _*, ) // error
  |                     ^
  |                     pattern expected

longer explanation available when compiling with `-explain`
-- [E040] Syntax Error: tests/neg/trailing-comma-pattern2.scala:4:0 ----------------------------------------------------
4 |
  |^
  |'=' expected, but unindent found
